// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon theme={theme} should render correctly 1`] = `
.c0 {
  height: 40px;
  font-weight: 400;
  font-size: 40px;
  color: #545456;
  cursor: inherit;
}

.c0:hover {
  color: #545456;
}

.c0::before {
  font-family: 'icomoon';
  content: '\\e957';
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <Icon
    color="gray5"
    name="bitcoin"
    selectable={false}
    size="40px"
    theme={
      Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      }
    }
    weight={400}
  >
    <styled.span
      code="\\\\e957"
      color="gray5"
      selectable={false}
      size="40px"
      theme={
        Object {
          "azure": "#3558A8",
          "bigStone": "#152343",
          "biscay": "#153A62",
          "black": "#000",
          "blackAlpha05": "rgba(0,0,0,0.05)",
          "blackAlpha75": "rgba(0,0,0,0.75)",
          "blueWood": "#27324B",
          "cerulean": "#10ADE4",
          "gold": "#FFCA00",
          "gray0": "#F8F8F8",
          "gray1": "#EEF2F5",
          "gray2": "#CCC",
          "gray3": "#999B9E",
          "gray4": "#757679",
          "gray5": "#545456",
          "gray6": "#383838",
          "gray7": "#040d25",
          "orient": "#004A7C",
          "powderBlue": "#B2D5E5",
          "transparent": "rgba(0, 0, 0, 0)",
          "white": "#FFF",
          "whiteAlpha10": "rgba(255,255,255,0.1)",
          "whiteAlpha75": "rgba(255,255,255,0.75)",
        }
      }
      weight={400}
    >
      <span
        className="c0"
        color="gray5"
        size="40px"
      />
    </styled.span>
  </Icon>
</ThemeProvider>
`;

exports[`Icon theme={theme} should render correctly with color 1`] = `
.c0 {
  height: 40px;
  font-weight: 400;
  font-size: 40px;
  color: #FFCA00;
  cursor: inherit;
}

.c0:hover {
  color: #FFCA00;
}

.c0::before {
  font-family: 'icomoon';
  content: '\\e957';
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <Icon
    color="gold"
    name="bitcoin"
    selectable={false}
    size="40px"
    theme={
      Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      }
    }
    weight={400}
  >
    <styled.span
      code="\\\\e957"
      color="gold"
      selectable={false}
      size="40px"
      theme={
        Object {
          "azure": "#3558A8",
          "bigStone": "#152343",
          "biscay": "#153A62",
          "black": "#000",
          "blackAlpha05": "rgba(0,0,0,0.05)",
          "blackAlpha75": "rgba(0,0,0,0.75)",
          "blueWood": "#27324B",
          "cerulean": "#10ADE4",
          "gold": "#FFCA00",
          "gray0": "#F8F8F8",
          "gray1": "#EEF2F5",
          "gray2": "#CCC",
          "gray3": "#999B9E",
          "gray4": "#757679",
          "gray5": "#545456",
          "gray6": "#383838",
          "gray7": "#040d25",
          "orient": "#004A7C",
          "powderBlue": "#B2D5E5",
          "transparent": "rgba(0, 0, 0, 0)",
          "white": "#FFF",
          "whiteAlpha10": "rgba(255,255,255,0.1)",
          "whiteAlpha75": "rgba(255,255,255,0.75)",
        }
      }
      weight={400}
    >
      <span
        className="c0"
        color="gold"
        size="40px"
      />
    </styled.span>
  </Icon>
</ThemeProvider>
`;

exports[`Icon theme={theme} should render correctly with name 1`] = `
.c0 {
  height: 40px;
  font-weight: 400;
  font-size: 40px;
  color: #545456;
  cursor: inherit;
}

.c0:hover {
  color: #545456;
}

.c0::before {
  font-family: 'icomoon';
  content: '\\e963';
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <Icon
    color="gray5"
    name="ethereum"
    selectable={false}
    size="40px"
    theme={
      Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      }
    }
    weight={400}
  >
    <styled.span
      code="\\\\e963"
      color="gray5"
      selectable={false}
      size="40px"
      theme={
        Object {
          "azure": "#3558A8",
          "bigStone": "#152343",
          "biscay": "#153A62",
          "black": "#000",
          "blackAlpha05": "rgba(0,0,0,0.05)",
          "blackAlpha75": "rgba(0,0,0,0.75)",
          "blueWood": "#27324B",
          "cerulean": "#10ADE4",
          "gold": "#FFCA00",
          "gray0": "#F8F8F8",
          "gray1": "#EEF2F5",
          "gray2": "#CCC",
          "gray3": "#999B9E",
          "gray4": "#757679",
          "gray5": "#545456",
          "gray6": "#383838",
          "gray7": "#040d25",
          "orient": "#004A7C",
          "powderBlue": "#B2D5E5",
          "transparent": "rgba(0, 0, 0, 0)",
          "white": "#FFF",
          "whiteAlpha10": "rgba(255,255,255,0.1)",
          "whiteAlpha75": "rgba(255,255,255,0.75)",
        }
      }
      weight={400}
    >
      <span
        className="c0"
        color="gray5"
        size="40px"
      />
    </styled.span>
  </Icon>
</ThemeProvider>
`;

exports[`Icon theme={theme} should render correctly with selectable 1`] = `
.c0 {
  height: 40px;
  font-weight: 400;
  font-size: 40px;
  color: #545456;
  cursor: pointer;
}

.c0:hover {
  color: #6d6d70;
}

.c0::before {
  font-family: 'icomoon';
  content: '\\e957';
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <Icon
    color="gray5"
    name="bitcoin"
    selectable={true}
    size="40px"
    theme={
      Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      }
    }
    weight={400}
  >
    <styled.span
      code="\\\\e957"
      color="gray5"
      selectable={true}
      size="40px"
      theme={
        Object {
          "azure": "#3558A8",
          "bigStone": "#152343",
          "biscay": "#153A62",
          "black": "#000",
          "blackAlpha05": "rgba(0,0,0,0.05)",
          "blackAlpha75": "rgba(0,0,0,0.75)",
          "blueWood": "#27324B",
          "cerulean": "#10ADE4",
          "gold": "#FFCA00",
          "gray0": "#F8F8F8",
          "gray1": "#EEF2F5",
          "gray2": "#CCC",
          "gray3": "#999B9E",
          "gray4": "#757679",
          "gray5": "#545456",
          "gray6": "#383838",
          "gray7": "#040d25",
          "orient": "#004A7C",
          "powderBlue": "#B2D5E5",
          "transparent": "rgba(0, 0, 0, 0)",
          "white": "#FFF",
          "whiteAlpha10": "rgba(255,255,255,0.1)",
          "whiteAlpha75": "rgba(255,255,255,0.75)",
        }
      }
      weight={400}
    >
      <span
        className="c0"
        color="gray5"
        size="40px"
      />
    </styled.span>
  </Icon>
</ThemeProvider>
`;

exports[`Icon theme={theme} should render correctly with size 1`] = `
.c0 {
  height: 72px;
  font-weight: 400;
  font-size: 72px;
  color: #545456;
  cursor: inherit;
}

.c0:hover {
  color: #545456;
}

.c0::before {
  font-family: 'icomoon';
  content: '\\e957';
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <Icon
    color="gray5"
    name="bitcoin"
    selectable={false}
    size="72px"
    theme={
      Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      }
    }
    weight={400}
  >
    <styled.span
      code="\\\\e957"
      color="gray5"
      selectable={false}
      size="72px"
      theme={
        Object {
          "azure": "#3558A8",
          "bigStone": "#152343",
          "biscay": "#153A62",
          "black": "#000",
          "blackAlpha05": "rgba(0,0,0,0.05)",
          "blackAlpha75": "rgba(0,0,0,0.75)",
          "blueWood": "#27324B",
          "cerulean": "#10ADE4",
          "gold": "#FFCA00",
          "gray0": "#F8F8F8",
          "gray1": "#EEF2F5",
          "gray2": "#CCC",
          "gray3": "#999B9E",
          "gray4": "#757679",
          "gray5": "#545456",
          "gray6": "#383838",
          "gray7": "#040d25",
          "orient": "#004A7C",
          "powderBlue": "#B2D5E5",
          "transparent": "rgba(0, 0, 0, 0)",
          "white": "#FFF",
          "whiteAlpha10": "rgba(255,255,255,0.1)",
          "whiteAlpha75": "rgba(255,255,255,0.75)",
        }
      }
      weight={400}
    >
      <span
        className="c0"
        color="gray5"
        size="72px"
      />
    </styled.span>
  </Icon>
</ThemeProvider>
`;

exports[`Icon theme={theme} should render correctly with uppercase 1`] = `
.c0 {
  height: 40px;
  font-weight: 400;
  font-size: 40px;
  color: #545456;
  cursor: inherit;
}

.c0:hover {
  color: #545456;
}

.c0::before {
  font-family: 'icomoon';
  content: '\\e957';
}

<ThemeProvider
  theme={
    Object {
      "azure": "#3558A8",
      "bigStone": "#152343",
      "biscay": "#153A62",
      "black": "#000",
      "blackAlpha05": "rgba(0,0,0,0.05)",
      "blackAlpha75": "rgba(0,0,0,0.75)",
      "blueWood": "#27324B",
      "cerulean": "#10ADE4",
      "gold": "#FFCA00",
      "gray0": "#F8F8F8",
      "gray1": "#EEF2F5",
      "gray2": "#CCC",
      "gray3": "#999B9E",
      "gray4": "#757679",
      "gray5": "#545456",
      "gray6": "#383838",
      "gray7": "#040d25",
      "orient": "#004A7C",
      "powderBlue": "#B2D5E5",
      "transparent": "rgba(0, 0, 0, 0)",
      "white": "#FFF",
      "whiteAlpha10": "rgba(255,255,255,0.1)",
      "whiteAlpha75": "rgba(255,255,255,0.75)",
    }
  }
>
  <Icon
    color="gray5"
    name="bitcoin"
    selectable={false}
    size="40px"
    theme={
      Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      }
    }
    weight={400}
  >
    <styled.span
      code="\\\\e957"
      color="gray5"
      selectable={false}
      size="40px"
      theme={
        Object {
          "azure": "#3558A8",
          "bigStone": "#152343",
          "biscay": "#153A62",
          "black": "#000",
          "blackAlpha05": "rgba(0,0,0,0.05)",
          "blackAlpha75": "rgba(0,0,0,0.75)",
          "blueWood": "#27324B",
          "cerulean": "#10ADE4",
          "gold": "#FFCA00",
          "gray0": "#F8F8F8",
          "gray1": "#EEF2F5",
          "gray2": "#CCC",
          "gray3": "#999B9E",
          "gray4": "#757679",
          "gray5": "#545456",
          "gray6": "#383838",
          "gray7": "#040d25",
          "orient": "#004A7C",
          "powderBlue": "#B2D5E5",
          "transparent": "rgba(0, 0, 0, 0)",
          "white": "#FFF",
          "whiteAlpha10": "rgba(255,255,255,0.1)",
          "whiteAlpha75": "rgba(255,255,255,0.75)",
        }
      }
      weight={400}
    >
      <span
        className="c0"
        color="gray5"
        size="40px"
      />
    </styled.span>
  </Icon>
</ThemeProvider>
`;
